# GEPCsim

./: CMakeLists.txt
TEST/: CMakeLists.txt
TEST/doc/: .PeterSherwood.txt.swp  outTOBs.txt
TEST/include/: tob_data.h
TEST/src/: create_256tob.cxx  main.cxx
doc/: compare.txt
include/: tob_data.h
src/: main.cxx  tob_data.cxx  tob_data_cp.cxx
